# ntx

./: README.md
note-tools/src/: CMakeLists.txt  blox.cpp  blox.hpp  detextion.cpp  detextion.hpp  main.cpp  parsers.cpp  parsers.hpp  version.hpp.tmpl
